--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 app/model/ModeloAuto.keras filter=lfs diff=lfs merge=lfs -text
 app/model/ModeloColores.keras filter=lfs diff=lfs merge=lfs -text
+__pycache__/ filter=lfs diff=lfs merge=lfs -text
+app/__pycache__/  filter=lfs diff=lfs merge=lfs -text
