--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 venv/
 __pycache__/
-app/__pycache__/
+app\__pycache__
+.env/
+app/config/__pycache__/
+app/model/__pycache__/
+app/model/ModeloAuto.keras
+app/model/ModeloColores.keras
